# blocky

./: Cargo.toml  README.md
personalities/: blocky.toml
scripts/: PipeCraft.sh  SetupPipes.sh
src/: lib.rs  main.rs
tests/: responses.rs
