[package]
name = "blocky"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
runtime-fmt = "0.4.0"