[package]
name = "blocky"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
serde = { version = "*", features = ["derive"] }
runtime-fmt = { git = "https://github.com/fdb-hiroshima/runtime-fmt.git", branch = "xid-1.39" }
rand = "*"